# HackNC2022

./: .gitignore  app.py  db.py  devpost.md  package-lock.json  package.json  pyproject.toml  routing.py  transpile.sh
static/: index.css  styles.css
static/css/: about.css  base.css  directions.css  index.css  map.css
static/js/: common.jsx  directions.jsx  map.jsx
templates/: about.html  base.html  concerns.html  directions.html  index.html  map.html  template.html
