[tool.poetry]
name = "hacknc2022"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
flask = "^2.2.2"
psycopg2 = "^2.9.5"
python = "^3.10"
requests = "^2.28.1"
dijkstar = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
